# skypia

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  check_webp.py  generate_emoji_assets.py  generate_emojis.py  scratch_meta.json  scratch_meta_anim.json  skypia.db  skypia.db-shm  skypia.db-wal  skypia_2.db-shm  skypia_2.db-wal  skypia_3.db-shm  skypia_3.db-wal  skypia_4.db-shm  skypia_4.db-wal  skypia_db.json  test_asset.rs
assets/: main.css  tailwind.css
src/: BuildConfig.kt  MainActivity.kt  emoji_assets.rs  main.rs  models.rs  sound.rs  state.rs
src/components/: avatar.rs  chat_feed.rs  chat_input.rs  chat_window.rs  contact_list.rs  contact_row.rs  login.rs  main_window.rs  mod.rs  profile_header.rs  toast.rs
src/components/auth/: login.rs  register.rs
src/components/chat/: chat_feed.rs  chat_input.rs  chat_sidebar.rs  chat_window.rs  games_modal.rs  mod.rs
src/components/main/: contact_list.rs  contact_row.rs  friend_requests_modal.rs  main_window.rs  mod.rs  settings_content.rs  settings_window.rs
src/components/profile/: avatar_picker.rs  group_profile_modal.rs  mod.rs  profile_header.rs  profile_modal.rs
src/models/: banner.rs  contact.rs  game.rs  group.rs  message.rs  mod.rs  theme.rs  user.rs
src/services/: api.rs  db.rs  mod.rs  spotify.rs  ws.rs
src/services/db/: contacts.rs  messages.rs  mod.rs  settings.rs  stickers.rs  user.rs
src/state/: auth.rs  chat.rs  contact.rs  game.rs  loader.rs  mod.rs  settings.rs  ui.rs  version.rs
