[package]
name = "skypia"
version = "0.1.0"
authors = ["Wellington A. Moreira <wk.scbd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "fullstack"] }
chrono = { version = "0.4.44" }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls"], default-features = false }
rfd = { version = "0.15", optional = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "rfd"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
