[package]
name = "skypia"
version = "0.1.0"
authors = ["Wellington A. Moreira <wk.scbd@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = ["router", "fullstack"] }
chrono = { version = "0.4.45" }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.13.4", features = [
    "json",
    "multipart",
    "rustls",
    "query",
], default-features = false }
rfd = { version = "0.17.2", optional = true }
tokio-tungstenite = { version = "0.29.0", features = ["rustls"] }
futures-util = "0.3.32"
uuid = { version = "1.23.2", features = ["v4"] }
dotenvy = "0.15.7"
base64 = "0.22.1"
percent-encoding = "2.3.2"

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = { version = "0.21.1", default-features = false }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "rfd"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
